fixes navbar spacing

--- a/new design for staging/marvelad.css
+++ b/new design for staging/marvelad.css
@@ -337,8 +337,8 @@ body {
 }
 
 .global-nav-space{
-    padding-left: 3%;
-    padding-right: 3%;
+    padding-left: 2.6%;
+    padding-right: 2.6%;
 }
 
 .main-wrapper {
